Initial commit, working on text files and structure

--- a/src/pages/demo/index.mdx
+++ b/src/pages/demo/index.mdx
@@ -1,12 +1,12 @@
 ---
-title: Demo
+title: Demo Page Here
 description: Demonstration of some of the theme components in action.
 ---
 
 <PageDescription>
 
 
-This page is meant to demonstrate some of the components in action. You can
+This page is meant to xxx some of the components in action. You can
 check out the markdown used for this page
 [on github](https://github.com/carbon-design-system/gatsby-theme-carbon/blob/main/packages/example/src/pages/demo/index.mdx).
 
