Mostly finished the landing page and quick-tour, started travel info. Added several new components.

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,31 +1,28 @@
 import HomepageTemplate from 'gatsby-theme-carbon/src/templates/Homepage';
 export default HomepageTemplate;
 
-## MDX content starts here
+## Welcome to Texas!
+
+<Row>
+<Column colMd={5} colLg={8}>
 
 <PageDescription>
 
-The homepage content here lives in the `src/pages/index.mdx` directory at the
-root of your project. Just like the other mdx pages, you can use all of our
-theme components here without importing them. Review the
-[MDX example source](https://github.com/carbon-design-system/gatsby-theme-carbon/blob/main/packages/example/src/pages/index.mdx).
+From the remote mountains of Big Bend to the dense forests of the Piney Woods, and the warm waters of the Gulf Coast to the refreshing rivers of the Hill Country, Texas boasts an enticing array of landscapes to explore. As any longtime Texan will tell you, there is no better way to experience the vastness and diversity of the state than behind the wheel of your car. Encompassing 254 counties and 268,597 square miles, the second-largest state in the country offers a seemingly endless number of routes and itineraries. And it’s a good thing since road trips have become increasingly vital over the past year as a safer way to travel during the ongoing COVID-19 pandemic. 
 
+In addition to listings for more than 2,500 attractions in nearly 500 cities, the 2021 Travel Guide includes themed and regional road-trip itineraries. Whether you want to plunge into spring-fed pools along the Central Texas swimming-hole trail, live like a cowboy on the ranges of the Panhandle Plains, or comfort-eat your way across the state at the best roadside mom and pops, we’ve got you covered. So gas up your car, prep your favorite tunes, and get ready to be inspired by the open road.     
+
+_–The Texas Highways Team_
 </PageDescription>
 
-<FeatureCard
-    color="dark"
-    href="/getting-started"
-    title="Getting started"
-    actionIcon="arrowRight"
-    className="homepage-feature"
-    >
+</Column>
 
-<ArtDirection>
+<Column colMd={2} colLg={3} offsetMd={1} offsetLg={1}>
+    <Aside>
+        Above: The 2021 Texas State Travel Guide and Texas Official Travel Map covers feature a natural arch along the Upper Burro Mesa Pour-Off Trail in Big Bend National Park. The photos are the work of artist, writer, and outdoor adventurer E. Dan Klepper of Marathon. Klepper is a frequent contributor to Texas Highways magazine.
+    </Aside>
+</Column>
+</Row>
 
-![blue vertical stripes](../images/blue-stripes-mobile.jpg)
-![blue vertical stripes](../images/blue-stripes-tablet.jpg)
-![blue vertical stripes](../images/blue-stripes.jpg)
-
-</ArtDirection>
-
-</FeatureCard>
+![A photo of an empty highway going into the Davis Mountains](../images/state-highway-166-wvo.jpg)
+State Highway 166 near Fort Davis. Photo by Will van Overbeek.
