--- a/src/pages/travel-information/index.mdx
+++ b/src/pages/travel-information/index.mdx
@@ -1,94 +1,37 @@
 ---
 title: Travel Information
-image: https://source.unsplash.com/random/800x500
-description: Quick start guide for getting acclimated with gatsby-theme-carbon
+description: Everything you need to know about traveling in Texas.
 ---
 
 <PageDescription>
 
-Don't have a lot of time? Take a quick tour of Texas.
-
 </PageDescription>
 
-## First steps
+<Row>
+<Column colSm={12} colMd={6} colLg={8}>
 
-1. **Create your site** – use the gatsby CLI to bootstrap your site with the
-   starter
+![The Laredo Travel Information Center in Laredo, Texas](images/laredo-travel-information-center.jpg)
+The Laredo Travel Information Center. Photo by Will van Overbeek.
 
-   ```sh
-   npx gatsby new my-carbon-site https://github.com/carbon-design-system/gatsby-starter-carbon-theme
-   ```
+**DRIVETEXAS™** — This is the Texas Department of Transportation’s highway conditions in­for­­mation service. Visit drivetexas.org to view an interactive highway map displaying construction areas, closures, weather-related hazards, and other conditions along your route. The website also has options allowing you to see a live traffic feed, view traffic cameras in select regions, and find safety rest areas and Texas Travel Information Centers. The site is both desktop- and mobile-friendly. 
+Travelers may also call 800-452-9292 for 24-hour automated informa­tion or to speak with a professional travel counselor for high­way conditions, safety information, and expert tourism recommendations from 8 a.m. to
+6 p.m. Central time seven days a week.
 
-2. **Start developing** – navigate into your directory with `cd my-carbon-site`.
+</Column>
 
-   Start it up using one of the following snippets. You can tell which command
-   to use based on the lock file at the root of your project (`yarn.lock` for
-   yarn and `package-lock.json` for npm). For yarn, type `yarn dev` for npm,
-   you’ll use `npm run dev`.
+<Column colSm={12} colMd={2} colLg={4}>
 
-3. **Make some changes!** – open [localhost:8000](//localhost:8000) in your
-   browser to see your site running.
+### Texas Travel Information Centers
 
-   Each of the Items in your side bar correlates to a MDX file in your
-   `src/pages/` directory. Navigate to a site and try editing the corresponding
-   markdown file. You’ll be able to see it update live!
+The Texas Department of Trans­portation operates 12 travel information centers for the convenience of the traveling public. Professional travel counselors welcome visitors and provide a wealth of information and suggestions to make every Texas trip safe and pleasant. 
 
-## 👀 Watch a newbie try it out
+Travel counselors supply comprehensive statewide travel publications, plus detailed brochures about points of interest, attractions, and recreational areas. The centers also host safety awareness events and other special events throughout the year.
 
-This is a demo of a new Carbon team member spinning up a Gatsby Theme Carbon
-site while following the steps listed above. To forward through the
-introduction, play from min `3:50`.
+The centers are open 8 a.m.–5 p.m. daily and 8 a.m.–6 p.m. Memorial Day weekend through Labor Day. The Capitol Visitor Center hours are 9 a.m.–5 p.m. Monday through Saturday and noon–5 p.m. Sunday year-round.
 
-<div style={{ border: '1px solid 	#c6c6c6' }}>
-  <Video title="Gatsby Theme Carbon Site Demo" vimeoId="437931932" />
-</div>
+All centers are closed on New Year’s Day, Easter Sunday, Thanksgiving Day, Christmas Eve, and Christmas Day.
 
-## 🔍 What’s in here?
+For 24-hour highway condition information, call *800-452-9292* or visit [drivetexas.org](https://drivetexas.org).
+</Column>
 
-Lets check out the structure of our project
-
-    .
-    ├── LICENSE
-    ├── README.md
-    ├── gatsby-config.js
-    ├── node_modules
-    ├── package.json
-    ├── public
-    ├── src
-    │   ├── data
-    │   ├── gatsby-theme-carbon
-    │   ├── images
-    │   └── pages
-    └── yarn.lock
-
-1.  **`/node_modules`**: This directory contains all of the modules of code that
-    your project depends on (npm packages) are automatically installed.
-
-1.  **`/src`**: This directory will contain all of the code related to what you
-    will see on the front-end of your site.
-
-    - **data** this is where you’ll update your sidebar order and contents
-    - **images** you can colocate your images here or store them next to your
-      pages, whichver you chose
-    - **gatsby-theme-carbon** this is where you’ll override (known as shadowing)
-      the default `gatsby-theme-carbon` components
-    - **pages** This is where most of your content will live. You’ll represent
-      each page with an MDX file.
-
-1.  **`.gitignore`**: This file tells git which files it should not track / not
-    maintain a version history for.
-
-1.  **`gatsby-config.js`**: This is the main configuration file for a Gatsby
-    site. This is where you can specify information about your site (metadata)
-    like the site title and description. You’ll notice that all of the
-    configuration for the site is coming from `gatsby-theme-carbon`
-
-1.  **`LICENSE`**: Gatsby is licensed under the Apache 2.0 license.
-
-1.  **`yarn.lock`** (See `package.json` below, first). This is an automatically
-    generated file based on the exact versions of your npm dependencies that
-    were installed for your project. **(You won’t change this file directly).**
-
-1.  **`package.json`**: A manifest file for Node.js projects, which includes
-    things like metadata (the project’s name, author, etc). This manifest is how
-    npm knows which packages to install for your project.
+</Row>
