Added text to Travel Info pages, few tweaks to nav and buttons

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -18,9 +18,13 @@ _–The Texas Highways Team_
 </Column>
 
 <Column colMd={2} colLg={3} offsetMd={1} offsetLg={1}>
-    <Aside>
-        Above: The 2021 Texas State Travel Guide and Texas Official Travel Map covers feature a natural arch along the Upper Burro Mesa Pour-Off Trail in Big Bend National Park. The photos are the work of artist, writer, and outdoor adventurer E. Dan Klepper of Marathon. Klepper is a frequent contributor to Texas Highways magazine.
-    </Aside>
+<Aside>
+
+**Above**: The 2021 Texas State Travel Guide and Texas Official Travel Map covers feature a natural arch along the Upper Burro Mesa Pour-Off Trail in Big Bend National Park. 
+
+The photos are the work of artist, writer, and outdoor adventurer E. Dan Klepper of Marathon. Klepper is a frequent contributor to Texas Highways magazine.
+
+</Aside>
 </Column>
 </Row>
 
