Created ads components and began placing ads. Some copy updates.

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,6 +6,9 @@ export default HomepageTemplate;
 <Row>
 <Column colMd={5} colLg={8}>
 
+![A photo of an empty highway going into the Davis Mountains](../images/state-highway-166-wvo.jpg)
+<Caption>State Highway 166 near Fort Davis. Photo by Will van Overbeek.</Caption>
+
 <PageDescription>
 
 From the remote mountains of Big Bend to the dense forests of the Piney Woods, and the warm waters of the Gulf Coast to the refreshing rivers of the Hill Country, Texas boasts an enticing array of landscapes to explore. As any longtime Texan will tell you, there is no better way to experience the vastness and diversity of the state than behind the wheel of your car. Encompassing 254 counties and 268,597 square miles, the second-largest state in the country offers a seemingly endless number of routes and itineraries. And it’s a good thing since road trips have become increasingly vital over the past year as a safer way to travel during the ongoing COVID-19 pandemic. 
@@ -13,6 +16,7 @@ From the remote mountains of Big Bend to the dense forests of the Piney Woods, a
 In addition to listings for more than 2,500 attractions in nearly 500 cities, the 2021 Travel Guide includes themed and regional road-trip itineraries. Whether you want to plunge into spring-fed pools along the Central Texas swimming-hole trail, live like a cowboy on the ranges of the Panhandle Plains, or comfort-eat your way across the state at the best roadside mom and pops, we’ve got you covered. So gas up your car, prep your favorite tunes, and get ready to be inspired by the open road.     
 
 _–The Texas Highways Team_
+
 </PageDescription>
 
 </Column>
@@ -28,5 +32,27 @@ The photos are the work of artist, writer, and outdoor adventurer E. Dan Klepper
 </Column>
 </Row>
 
-![A photo of an empty highway going into the Davis Mountains](../images/state-highway-166-wvo.jpg)
-State Highway 166 near Fort Davis. Photo by Will van Overbeek.
+<Row>
+
+<Column colSm={12} colMd={4} colLg={6}>
+<Ad file="static-marble-falls-lake-lbj.jpg"/>
+</Column>
+
+<Column colSm={12} colMd={4} colLg={6}>
+<Ad file="static-visit-corpus-christi.jpg"/>
+</Column>
+
+</Row>
+
+<Row>
+
+<Column colSm={12} colMd={4} colLg={6}>
+<Ad file="static-austin-parks-and-recreation.jpg"/>
+</Column>
+
+<Column colSm={3} colMd={3} colLg={5}>
+<Ad file="static-texas-highways-mercantile-1-6.jpg"/>
+<Ad file="static-visit-kilgore.jpg"/>
+</Column>
+
+</Row>
