--- a/src/pages/quick-tour/index.mdx
+++ b/src/pages/quick-tour/index.mdx
@@ -3,14 +3,16 @@ title: "Texas: A Quick Tour"
 description: Visit these outdoor destinations to enjoy the grand diversity of the state’s landscapes and habitats.
 ---
 
+<Row>
+
+<Column colSm={12} colMd={4} colLg={6}>
+
+
 <PageDescription>
 
 Visit these outdoor destinations to enjoy the grand diversity of the state’s landscapes and habitats.
 
 </PageDescription>
-
-<Row>
-<Column colSm={12} colMd={8} colLg={7}>
 
 <Accordion>
 <AccordionItem title="Travel Information Centers">
@@ -34,12 +36,7 @@ The Texas Department of Transportation operates 12 travel information centers fo
 | Wichita Falls      | I-44/US 287, Exit 1C   | 940-723-7931 |
 
 </AccordionItem>
-</Accordion>
-</Column>
 
-<Column colSm={12} colMd={8} colLg={5}>
-
-<Accordion>
 <AccordionItem title="Traveling Across Texas">
   These examples of mileage across the state will help determine distances:
 
@@ -58,12 +55,20 @@ The Texas Department of Transportation operates 12 travel information centers fo
 | Dallas to Fort Worth              | 30 miles  |
 
 </AccordionItem>
+
 </Accordion>
 
-</Column>
-</Row>
+![A map of the travel regions of Texas](images/texas-travel-map-regions.png)    
 
-![A map of the travel regions of Texas](images/texas-travel-map-regions.png)
+</Column>
+
+<Column colSm={12} colMd={4} colLg={6}>
+
+<Ad file="static-abilene.jpg"/>
+
+</Column>
+
+</Row>
 
 <Row>
 <Column colSm={12} colMd={4} colLg={4}>
