--- a/src/pages/travel-information/index.mdx
+++ b/src/pages/travel-information/index.mdx
@@ -28,30 +28,6 @@ Texas pioneered the concept of miniature parks along roadways—an idea that has
 
 Pay careful attention to speed limit signs! In Texas, speed limits can range from 25 mph to 85 mph on numbered highways. Speed limits on some Texas highways, especially urban freeways, may be reduced because of their individual operating characteristics. Posted speed limits apply to cars and trucks for both day and night.
 
-#### Toll Roads
-
-Many toll roads are cashless or all-electronic, meaning they do not have staffed booths to take tolls. Some require people to have toll tags, and some may have a Pay by Mail option. If a vehicle without a valid toll tag uses a toll road, a picture is taken of the license plate, and the bill is mailed to the address associated with the plate. The bill may contain an administrative charge in addition to the toll fee. Rental car drivers should check with the rental company regarding the handling of toll fees. On the occasion that a toll plaza is staffed, signs will direct travelers to lanes with the option to stop and pay. Visit [txtag.org](http://txtag.org) to view locations of toll roads and find information on payment forms accepted. 
-
-#### Traffic Signs
-
-Speeds, caution areas, stops, and directions in the state are marked by more than half a million signs. Passing is illegal when there is a continuous yellow stripe on the driver’s side of the center line. Center lines are yellow dashed stripes. White dashed stripes separate dual lanes of traffic in the same direction. Painted or reflective pavement arrows often show ap­proved directions or turns. Arrows pointing toward you or red reflectors indicate you are driving the wrong way on a freeway ramp or one-way street.
-
-#### Auto Safety Belts and Child Seats
-
-All people in a passenger vehicle, regardless of age or seating position, are required to wear a seat belt. Children up to 8 years old, unless taller than 4 feet 9 inches, must ride in child safety seats. Fines may be levied for failure to use safety belts and child safety seats.
-
-#### Auto Insurance
-
-A motor vehicle may not be operated in Texas unless a policy of liability insurance is in effect. Evidence of insurance must be furnished when requested by a police officer.
-
-#### Don’t Mess with Texas
-
-For more than 35 years, the Don’t mess with Texas® campaign has been reminding motorists to keep our highways litter-free. Don’t mess with Texas is a registered service mark and trademark owned by the Texas Department of Trans­portation. [dontmesswithtexas.org](https://dontmesswithtexas.org)
-
-#### Climate
-
-Texas is a large and diverse state; climate conditions can vary from one end to the other. Its terrain includes arid desert mountains, high plains, limestone hills, rich farmland, grasslands, marshes, and deep forests. The state enjoys generally mild winters, though snow and ice can occur in the Panhandle. The summers are generally hot. In July, the average daytime high statewide is almost 96 degrees. Average annual rainfall varies from less than 10 inches in far West Texas to more than 50 inches in parts of East Texas.
-
 </Column>
 
 <Column colSm={12} colMd={2} colLg={4}>
@@ -68,6 +44,50 @@ The Capitol Visitor Center hours are 9 a.m.–5 p.m. Monday through Saturday and
 All centers are closed on New Year’s Day, Easter Sunday, Thanksgiving Day, Christmas Eve, and Christmas Day.
 
 For 24-hour highway condition information, call **800-452-9292** or visit [drivetexas.org](https://drivetexas.org).
+</Column>
+
+</Row>
+
+<Row>
+<Column colSm={12} colMd={4} colLg={6}>
+<Ad file="static-round-rock.jpg"/>
+</Column>
+</Row>
+
+<Row>
+<Column colSm={12} colMd={6} colLg={8}>
+
+#### Toll Roads
+
+Many toll roads are cashless or all-electronic, meaning they do not have staffed booths to take tolls. Some require people to have toll tags, and some may have a Pay by Mail option. If a vehicle without a valid toll tag uses a toll road, a picture is taken of the license plate, and the bill is mailed to the address associated with the plate. The bill may contain an administrative charge in addition to the toll fee. Rental car drivers should check with the rental company regarding the handling of toll fees. On the occasion that a toll plaza is staffed, signs will direct travelers to lanes with the option to stop and pay. Visit [txtag.org](http://txtag.org) to view locations of toll roads and find information on payment forms accepted. 
+
+#### Traffic Signs
+
+Speeds, caution areas, stops, and directions in the state are marked by more than half a million signs. Passing is illegal when there is a continuous yellow stripe on the driver’s side of the center line. Center lines are yellow dashed stripes. White dashed stripes separate dual lanes of traffic in the same direction. Painted or reflective pavement arrows often show ap­proved directions or turns. Arrows pointing toward you or red reflectors indicate you are driving the wrong way on a freeway ramp or one-way street.
+
+#### Auto Safety Belts and Child Seats
+
+All people in a passenger vehicle, regardless of age or seating position, are required to wear a seat belt. Children up to 8 years old, unless taller than 4 feet 9 inches, must ride in child safety seats. Fines may be levied for failure to use safety belts and child safety seats.
+
+</Column>
+
+</Row>
+
+<Row>
+<Column colSm={12} colMd={6} colLg={8}>
+
+#### Auto Insurance
+
+A motor vehicle may not be operated in Texas unless a policy of liability insurance is in effect. Evidence of insurance must be furnished when requested by a police officer.
+
+#### Don’t Mess with Texas
+
+For more than 35 years, the Don’t mess with Texas® campaign has been reminding motorists to keep our highways litter-free. Don’t mess with Texas is a registered service mark and trademark owned by the Texas Department of Trans­portation. [dontmesswithtexas.org](https://dontmesswithtexas.org)
+
+#### Climate
+
+Texas is a large and diverse state; climate conditions can vary from one end to the other. Its terrain includes arid desert mountains, high plains, limestone hills, rich farmland, grasslands, marshes, and deep forests. The state enjoys generally mild winters, though snow and ice can occur in the Panhandle. The summers are generally hot. In July, the average daytime high statewide is almost 96 degrees. Average annual rainfall varies from less than 10 inches in far West Texas to more than 50 inches in parts of East Texas.
+
 </Column>
 
 </Row>
@@ -95,6 +115,12 @@ You also can call the Texas Travel Information Center travel counselors at 800-4
 
 Amtrak, the nation’s passenger train service, offers three lines that run through Texas. For information and reservations, call 800-USA-RAIL or visit [amtrak.com](https://amtrak.com).
 
+</Column>
+</Row>
+
+<Row>
+<Column colSm={12} colMd={4} colLg={6}>
+<Ad file="static-texas-dept-of-agriculture.jpg"/>
 </Column>
 </Row>
 
