Finished almost all of the road trips. Perfected ad widget. Small tweaks to favicon and homepage.

--- a/src/pages/quick-tour/index.mdx
+++ b/src/pages/quick-tour/index.mdx
@@ -3,6 +3,12 @@ title: "Texas: A Quick Tour"
 description: Visit these outdoor destinations to enjoy the grand diversity of the state’s landscapes and habitats.
 ---
 
+export const Title = () => (
+  <span>
+    Texas: <br />A Quick Tour
+  </span>
+);
+
 <Row>
 
 <Column colSm={12} colMd={4} colLg={6}>
@@ -62,7 +68,7 @@ The Texas Department of Transportation operates 12 travel information centers fo
 
 </Column>
 
-<Column colSm={12} colMd={4} colLg={6}>
+<Column colSm={12} colMd={5} colLg={6}>
 
 <Ad file="static-abilene.jpg"/>
 
