Added last of road trips and started working on search feature

--- a/src/pages/road-trips/swimming-holes.mdx
+++ b/src/pages/road-trips/swimming-holes.mdx
@@ -43,3 +43,68 @@ Utilizing Central Texas’ bounty of swimming holes in the summertime is just th
 </Column>
 
 </Row>
+
+<Row>
+
+<Column colSm={12} colMd={6} colLg={8}>
+
+### Six Rope Swings to Enjoy
+
+**By Pam LeBlanc**
+
+We love the free-as-a-breeze feeling that comes when you take a flying leap off a rope swing. That’s why we’ve scoured the state to find some of the best. Before you swing, keep these safety tips in mind: make sure there aren’t any rocks, branches, or other obstacles in the water; check to see if the branch holding the rope is strong enough to support you; untangle the rope from your body for an easy dismount; don’t release too soon or too late; don’t drink and swing; and don’t swing if you can’t swim. 
+
+#### Utopia Park
+
+You’ll have to steel your nerves to get to the highest launch point of the rope swing at this leafy small-town park, established in 1929 on a dammed stretch of the Sabinal River, about 16 miles downstream from Lost Maples State Natural Area. $10 per person day-use fee, free for ages 12 and younger. 
+
+**241 Utopia Park Road, Utopia. 830-966-3643; [utopiapark.org](http://utopiapark.org)**
+
+#### Bandera City Park
+
+A short trot from the town known as the Cowboy Capital of the World flows a stretch of the Medina River so tempting you might jump in wearing your street clothes. Scale the boards nailed to the trunk of a huge bald cypress tree on the opposite bank (technically outside of the park’s boundaries). No entry fee Mon-Fri; $10 per adult weekends and holidays March-October, $5 for military, seniors, and first responders; free for ages 6 and younger. Call to check conditions during drought. 
+
+**1102 Maple St., Bandera. 830-796-3765; [cityofbandera.org](http://cityofbandera.org)**
+
+#### Krause Springs
+
+Wear your river sandals to scale the big tilted slab of rock at this old-timey swimming hole 36 miles west of Austin. From there you can reach the knotted rope swing that will deliver you beneath a fern-covered cliff into a glinting pool. $8 adults, $5 children, free ages 3 and younger. 
+
+**424 County Road 404, Spicewood. 830-693-4181; [krausesprings.net](http://krausesprings.net)**
+
+#### Blue Hole
+
+Pick from two rope swings to launch yourself into the shady emerald pools of Cypress Creek—one for the big kids and adults over deep water, a smaller one for those just metaphorically wetting their toes. $10 adults; $6 youth, seniors, and military. To ensure entry, book ahead. 
+
+**100 Blue Hole Lane, Wimberley. 512-660-9111; [cityofwimberley.com](http://cityofwimberley.com)**
+
+#### “Come and Take It” rope swing: 
+
+Located near the spot where the first shot in the battle for Texas independence was fired, the rope hangs from a thick branch of an old cypress tree on the southern bank of the Guadalupe River, on the west side of the bridge. If you’re already in the water, scramble up the bank to get to the tree, climb a few steps up the trunk, grab on to the rope, and fling yourself over the usually deep pool below. Check currents, which sometimes move swiftly, and consider life vests for those who aren’t strong swimmers. Free. 
+
+**US 183 at the Guadalupe River Bridge outside of Gonzales.**
+
+#### Camp Tonkawa Springs
+
+On the hottest of hot days, a plunge into the aquamarine spring-fed pool here feels a lot like jumping into an alpine lake—or a melted iceberg. And the rope swings? The best one beckons from a tree that leans way out over the pool. Rope swingers used to climb boards nailed to the tree trunk. The boards are gone now, but well-worn notches serve the same purpose. $10 per person, free for ages 5 and younger. Alcohol is banned on designated family days, when admission is $5 per person. Open year-round. 
+
+**4675 County Road 153, Garrison. 936-564-8888; [camptonkawa.com](http://camptonkawa.com)**
+
+</Column>
+
+<Column colSm={12} colMd={2} colLg={4}>
+
+![A man leaps off of a rope swing into the water below](images/rope-swing-krause-springs.jpg)
+<Caption>Jumping off the rope swing at Krause. Photo by Erich Schlegel.</Caption>
+
+</Column>
+
+</Row>
+
+<Row>
+<Column colSm={12} colMd={5} colLg={6}>
+
+<Ad file="static-visit-frisco.jpg"/>
+
+</Column>
+</Row>
