--- a/src/pages/things-to-do-in-texas/index.mdx
+++ b/src/pages/things-to-do-in-texas/index.mdx
@@ -8,3 +8,15 @@ description: Find things to do and places to visit across Texas using this page
 Search all listings we have in our Travel Guide
 
 </PageDescription>
+
+<Row>
+
+<Column colSm={12} colMd={3} colLg={8}>
+<SearchListings/>
+</Column>
+
+<Column colSm={12} colMd={3} colLg={4}>
+<RandomAd/>
+</Column>
+
+</Row>
