Nearly finished search function

--- a/src/pages/things-to-do-in-texas/index.mdx
+++ b/src/pages/things-to-do-in-texas/index.mdx
@@ -11,11 +11,12 @@ Search all listings we have in our Travel Guide
 
 <Row>
 
-<Column colSm={12} colMd={3} colLg={8}>
+<Column colSm={12} colMd={5} colLg={8}>
 <SearchListings/>
 </Column>
 
 <Column colSm={12} colMd={3} colLg={4}>
+<RandomAd/>
 <RandomAd/>
 </Column>
 
