--- a/src/pages/regions/south-texas-plains.mdx
+++ b/src/pages/regions/south-texas-plains.mdx
@@ -29,6 +29,12 @@ Just up the road from the National Butterfly Center in Mission, The Bryan House 
 </Column>
 
 <Column colSm={12} colMd={2} colLg={4}>
+
+    <ResourceCard
+      subTitle="Carbon Design System"
+      href="https://www.carbondesignsystem.com">
+    </ResourceCard>
+    
 </Column>
 
 </Row>
