Search function gone and footer links added

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -33,26 +33,31 @@ The photos are the work of artist, writer, and outdoor adventurer E. Dan Klepper
 </Row>
 
 <Row>
-
-<Column colSm={12} colMd={5} colLg={6}>
-<Ad file="static-marble-falls-lake-lbj.jpg"/>
+<Column colSm={12} colMd={8} colLg={12}>
+<Ad file="static-marble-falls-wide.jpg"/>
 </Column>
+</Row>
+
+<Row>
 
 <Column colSm={12} colMd={5} colLg={6}>
 <Ad file="static-visit-corpus-christi.jpg"/>
+</Column>
+
+<Column colSm={12} colMd={5} colLg={6}>
+<Ad file="static-austin-parks-and-recreation.jpg"/>
 </Column>
 
 </Row>
 
 <Row>
 
-<Column colSm={12} colMd={5} colLg={6}>
-<Ad file="static-austin-parks-and-recreation.jpg"/>
+<Column colSm={3} colMd={3} colLg={5}>
+<Ad file="static-visit-kilgore.jpg"/>
 </Column>
 
 <Column colSm={3} colMd={3} colLg={5}>
 <Ad file="static-texas-highways-mercantile-1-6.jpg"/>
-<Ad file="static-visit-kilgore.jpg"/>
 </Column>
 
 </Row>
